Add SMS reporting and verification code extraction functionality.

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timber_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation project(":common")
+
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 repositories {
