--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,7 @@ jobs:
         run: ./gradlew androidDependencies
 
       - name: Gradle build
-        run: ./gradlew :presentation:assembleWithAnalyticsDebug :presentation:bundleWithAnalyticsDebug
+        run: ./gradlew :presentation:assembleNoAnalyticsDebug :presentation:bundleNoAnalyticsDebug
 
       - name: Flatten outputs
         run: find presentation/build/outputs -mindepth 2 -type f -exec mv -i '{}' presentation/build/outputs/ ';'
